--- a/po/QML-id.po
+++ b/po/QML-id.po
@@ -11,6 +11,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Weblate 4.12.1\n"
 "X-Qt-Contexts: true\n"
+"X-Language: id\n"
 
 msgctxt "Description|"
 msgid "Meta-Analysis"
