--- a/po/QML-fr.po
+++ b/po/QML-fr.po
@@ -11,6 +11,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Generator: Weblate 4.14.1\n"
 "X-Qt-Contexts: true\n"
+"X-Language: fr\n"
 
 msgctxt "Description|"
 msgid "Meta-Analysis"
